<resources>
    <string name="app_name">colors</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="semiTransparent">Semitransparent</string>
    <string name="transparent">Transparent</string>
    <string name="magenta">Magenta</string>
    <string name="cyan">Cyan</string>
    <string name="alpha">Alpha</string>
    <string name="item7">Contact us</string>
    <string name="txt_name">Developed by: Oscar Faini Bravo</string>
    <string name="txt_code">Code: I043116</string>
    <string name="txt_mail">e-mail: oscar.faini@gmail.com</string>
    <string name="btn_contact">Return</string>
</resources>
