<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_red"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/red"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/sbrRed"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:progress="0"
                android:max="255"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_green"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/green"
                android:textSize="24sp"/>

            <SeekBar
                android:id="@+id/sbrGreen"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:progress="0"
                android:max="255" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_blue"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/blue"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/sbrBlue"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:progress="0"
                android:max="255"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_alpha"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/alpha"
                android:textSize="24sp"  />

            <SeekBar
                android:id="@+id/sbrAlpha"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:progress="0"
                android:max="255" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/nature">

            <View
                android:id="@+id/viewColors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80808080"/>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>